--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "vite-plugin-vuetify": "^1.0.2",
     "vue": "^3.3.8",
+    "vue-router": "4",
     "vuetify": "^3.4.2"
   },
   "devDependencies": {
