--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -5,6 +5,7 @@ extends:
   - eslint:recommended
   - plugin:@typescript-eslint/recommended
   - plugin:vue/vue3-essential
+  - prettier
 parser: vue-eslint-parser
 parserOptions:
   ecmaVersion: latest
