--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "vuetify": "^3.4.2"
   },
   "devDependencies": {
+    "@mdi/font": "^7.3.67",
+    "@types/node": "^20.10.0",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "@vitejs/plugin-vue": "^4.5.0",
